--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@
 
 ## Local  =================================================================
 */.local
-# * /.vscode 
+*/.vscode 
+*/dev/build
 # * remove .vscode from the .gitignore for save default .vscode setting 
