--- a/cpp-vigembus/dev/makefile
+++ b/cpp-vigembus/dev/makefile
@@ -1,54 +1,72 @@
-# 경로의 모든 백슬래시를 슬래시로 변경
+# Makefile
 
-#### g++ > 외부 라이브러리 소스코드
-SRCS := "D:/Program Files/test.cpp" \
-		"C:/Program Files/test.cpp"
+## Default Setting ===============================================
 
-OBJS := $(SRCS:%.cpp"=build/%.o")
+### .PHONY 타겟 선언 (실제 파일과 구분)
+.PHONY: default all run clean
 
-CXXLSRCS := D:/Program Files/test.cpp \
-			C:/main.cpp
+### 기본 타겟 설정
+default: all
 
-CXXLOBJS := $(subst ,#,$(CXXLSRCS))
-# CXXLOBJS := $(patsubst %.cpp,build/%.o,$(subst  ,#,$(CXXLSRCS)))
+## Variable ======================================================
 
-# $(subst :,_,$(SRC))
+### Files
+OUTPUT   := main.exe
+SRCS     := $(wildcard src/*.cpp src/*/*.cpp main.cpp)
+OBJS     := $(SRCS:%.cpp=build/%.o)
 
-#  $(patsubst %.cpp,$(BUILD_DIR)/%.o,$(subst /,_,$(subst :,_,$(SRC))))))\
+### g++
 
-define CXXLSRCS_RULE
-$(1):
-	@ECHO.
-	@ECHO "MACRO $$< -o $$@"
-endef
+#### g++ > 컴파일러 선택
+CXX      := g++
 
+#### g++ > 컴파일러 옵션 플래그
+# * -O2          | loop unrolling, function inlining, 메모리,속도희생 빼고 전부 최적화
+# * -Wall        | 모든 모호한 코딩에 대해서 경고를 보내는 옵션
+# * -g           | 디버깅 정보 포함
+# * -static      | 정적,공유 라이브러리 중 정적을 우선. 속도는 빠르나 파일 사이즈가 커짐
+# * -std=gnu++17 | C++17 Clang GNU 확장기능 유효
+# * -pthread     | GCC의 스레드 지원 모드 활성화
+CXXFLAGS := -O2 \
+			-Wall \
+			-g \
+			-std=gnu++17 \
+			-pthread
 
-# $(foreach S, $(SOURCES), $(eval $(call DEFINE_RULE, $(S))))
+#### g++ > 전처리단계 헤더 경로 추가
+# * -I"include"                                              | Local
+# * -I"D:/Program Files/ViGEm/ViGEmClient-1.16.18.0/include" | ViGEm
+CXXINCS  := -I"include" \
+			-I"D:/Program Files/ViGEm/ViGEmClient-1.16.18.0/include"
 
-# $(foreach i, $(CXXLSRCS), $(call DEFINE_RULE, $(i)))
+#### g++ > 링킹단계 라이브러리 경로 추가
+# * -L"lib"                                              | Local
+CXXLIBS  := -L"lib"
 
-# $(call CXXLSRCS_RULE, $(I), $(TARGET))
+#### g++ > 링킹단계 라이브러리 링크, -lX 은 libX.so 또는 libX.a 를 의미
+# * -lm          | Math 라이브러리
+# * -lsetupapi   | SetupAPI 라이브러리
+CXXLINKS := -lm \
+			-lsetupapi
 
+## Target ========================================================
 
+### 기본 타겟: 실행 파일 생성
+all: $(OUTPUT)
 
-# I := C:\y.cpp
-# TARGET := $(subst :,_,$(I))
+### 링크단계 실행 파일 빌드
+$(OUTPUT): $(OBJS)
+	$(CXX) $^ -o $@ $(CXXFLAGS) $(CXXLIBS) $(CXXLINKS)
 
-# define COMPILE_EXTERNAL_MACRO
-# $(2):
-# 	@ECHO "MACRO $$< -o $$@"
-# endef
+#### 전처리단계 오브젝트 파일 생성
+build/%.o: %.cpp
+	@IF NOT EXIST "$(subst /,\,$(dir $@))" MKDIR "$(subst /,\,$(dir $@))"
+	$(CXX) $< -o $@ -c $(CXXFLAGS) $(CXXINCS)
 
-# $(eval $(call COMPILE_EXTERNAL_MACRO, $(I), $(TARGET)))
+run: all
+	cmd /c chcp 65001>nul && $(OUTPUT)
+# * "@./$(OUTPUT)" 으로 즉시 구동해도 되나, 유니코드 문제 해결을 위해 우회함
 
-.PHONY: default test
-default: test
-
-test:
-	@ECHO "$(CXXLSRCS)"
-	@ECHO "$(CXXLOBJS)"
-
-# test:
-# 	$(foreach I, $(SRCS), @ECHO $(I);)
-# # 	@ECHO "$(SRCS)"
-# # 	@ECHO "$(OBJS)"
+clean:
+	@IF EXIST $(OUTPUT) DEL /Q $(OUTPUT)
+	@IF EXIST "build" RMDIR /S /Q "build"
